; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_txrx.c_httpd_unrecv.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_http_server/src/extr_httpd_txrx.c_httpd_unrecv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.httpd_req = type { %struct.httpd_req_aux* }
%struct.httpd_req_aux = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64 }

@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"length = %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @httpd_unrecv(%struct.httpd_req* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.httpd_req*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.httpd_req_aux*, align 8
  %8 = alloca i64, align 8
  store %struct.httpd_req* %0, %struct.httpd_req** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load %struct.httpd_req*, %struct.httpd_req** %4, align 8
  %10 = getelementptr inbounds %struct.httpd_req, %struct.httpd_req* %9, i32 0, i32 0
  %11 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %10, align 8
  store %struct.httpd_req_aux* %11, %struct.httpd_req_aux** %7, align 8
  %12 = load i64, i64* %6, align 8
  %13 = call i64 @MIN(i32 8, i64 %12)
  %14 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %7, align 8
  %15 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %14, i32 0, i32 0
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %15, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store i64 %13, i64* %17, align 8
  %18 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %7, align 8
  %19 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = sub i64 8, %22
  store i64 %23, i64* %8, align 8
  %24 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %7, align 8
  %25 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %24, i32 0, i32 0
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %26, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* %8, align 8
  %30 = add i64 %28, %29
  %31 = load i8*, i8** %5, align 8
  %32 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %7, align 8
  %33 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %32, i32 0, i32 0
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  %37 = call i32 @memcpy(i64 %30, i8* %31, i64 %36)
  %38 = load i32, i32* @TAG, align 4
  %39 = call i32 @LOG_FMT(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %40 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %7, align 8
  %41 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %40, i32 0, i32 0
  %42 = load %struct.TYPE_2__*, %struct.TYPE_2__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = call i32 @ESP_LOGD(i32 %38, i32 %39, i64 %44)
  %46 = load %struct.httpd_req_aux*, %struct.httpd_req_aux** %7, align 8
  %47 = getelementptr inbounds %struct.httpd_req_aux, %struct.httpd_req_aux* %46, i32 0, i32 0
  %48 = load %struct.TYPE_2__*, %struct.TYPE_2__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  ret i64 %50
}

declare dso_local i64 @MIN(i32, i64) #1

declare dso_local i32 @memcpy(i64, i8*, i64) #1

declare dso_local i32 @ESP_LOGD(i32, i32, i64) #1

declare dso_local i32 @LOG_FMT(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
